--- a/libgfs/Makefile
+++ b/libgfs/Makefile
@@ -1,8 +1,8 @@
 gf.o : gf.cpp gf.hpp
-	g++ -c -O pgf.cpp
+	g++ -c -O gf.cpp
 
 test.o : test.cpp gf.hpp
 	g++ -c -O test.cpp
 
-test: gf.o test.o
+test : gf.o test.o
 	g++ -O -o test gf.o test.o
