hermite gaussians, stuff still broken

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,17 +4,14 @@ miscmath.o: ../libmath/miscmath.cpp ../libmath/miscmath.hpp
 gf.o: ../libgf/gf.cpp ../libgf/gf.hpp ../libmath/miscmath.hpp
 	g++ -c -O ../libgf/gf.cpp
 
-0e.o: ../libint/0e.cpp ../libint/0e.hpp ../libgf/gf.hpp
-	g++ -c -O ../libint/0e.cpp
-
-1e.o: ../libint/1e.cpp ../libint/1e.hpp ../libint/0e.hpp
+1e.o: ../libint/1e.cpp ../libint/1e.hpp ../libgf/gf.hpp
 	g++ -c -O ../libint/1e.cpp
 
 test.o: test.cpp ../libint/1e.hpp 
 	g++ -c -O test.cpp
 
-test: gf.o miscmath.o 0e.o 1e.o test.o
-	g++ -O -o test gf.o miscmath.o 0e.o 1e.o test.o
+test: gf.o miscmath.o 1e.o test.o
+	g++ -O -o test gf.o miscmath.o 1e.o test.o
 
 clean:
-	rm -f *.o
+	rm -f *.o test
