all integrals complete

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,11 +7,14 @@ gf.o: ../libgf/gf.cpp ../libgf/gf.hpp ../libmath/miscmath.hpp
 1e.o: ../libint/1e.cpp ../libint/1e.hpp ../libgf/gf.hpp
 	g++ -c -O ../libint/1e.cpp
 
-test.o: test.cpp ../libint/1e.hpp 
+2e.o: ../libint/2e.cpp ../libint/2e.hpp ../libint/1e.hpp
+	g++ -c -O ../libint/2e.cpp
+
+test.o: test.cpp ../libint/2e.hpp 
 	g++ -c -O test.cpp
 
-test: miscmath.o gf.o 1e.o test.o
-	g++ -O -o test miscmath.o gf.o 1e.o test.o
+test: miscmath.o gf.o 1e.o 2e.o test.o
+	g++ -O -o test miscmath.o gf.o 1e.o 2e.o test.o
 
 clean:
 	rm -f *.o test
