--- a/test/Makefile
+++ b/test/Makefile
@@ -7,14 +7,11 @@ linalg.o: ../libmath/linalg.cpp ../libmath/linalg.hpp
 gf.o: ../libgf/gf.cpp ../libgf/gf.hpp ../libmath/miscmath.hpp
 	g++ -c -O ../libgf/gf.cpp
 
-1e.o: ../libint/1e.cpp ../libint/1e.hpp ../libgf/gf.hpp
+1e.o: ../libint/1e.cpp ../libint/1e.hpp ../libgf/gf.hpp ../libmath/linalg.hpp
 	g++ -c -O ../libint/1e.cpp
 
 2e.o: ../libint/2e.cpp ../libint/2e.hpp ../libint/1e.hpp
 	g++ -c -O ../libint/2e.cpp
-
-buildmatrix.o: ../libint/buildmatrix.cpp ../libint/buildmatrix.hpp
-	g++ -c -O ../libint/buildmatrix.cpp
 
 mol.o: ../libmol/mol.cpp ../libmol/mol.hpp ../libgf/gf.hpp
 	g++ -c -O ../libmol/mol.cpp
@@ -22,8 +19,8 @@ mol.o: ../libmol/mol.cpp ../libmol/mol.hpp ../libgf/gf.hpp
 test.o: test.cpp ../libint/2e.hpp ../libmol/mol.hpp
 	g++ -c -O test.cpp
 
-test: miscmath.o linalg.o gf.o 1e.o 2e.o buildmatrix.o mol.o test.o
-	g++ -O -o test miscmath.o linalg.o gf.o 1e.o 2e.o buildmatrix.o mol.o test.o
+test: miscmath.o linalg.o gf.o 1e.o 2e.o mol.o test.o
+	g++ -O -o test miscmath.o linalg.o gf.o 1e.o 2e.o mol.o test.o
 
 clean:
 	rm -f *.o
