--- a/hartree-fock/Makefile
+++ b/hartree-fock/Makefile
@@ -1,26 +1,18 @@
-miscmath.o: ../libmath/miscmath.cpp ../libmath/miscmath.hpp
-	g++ -c -O ../libmath/miscmath.cpp
+CXX = g++
+CXXFLAGS = -g -O -fsanitize=address
+LDFLAGS = -fsanitize=address -llapack -lblas
 
-linalg.o: ../libmath/linalg.cpp ../libmath/linalg.hpp
-	g++ -c -O ../libmath/linalg.cpp
+SOURCES = ../libmath/miscmath.cpp ../libmath/linalg.cpp ../libgf/gf.cpp ../libint/1e.cpp ../libint/2e.cpp ../libmol/mol.cpp hartree-fock.cpp
+OBJECTS = $(SOURCES:.cpp=.o)
+TARGET = hartree-fock
 
-gf.o: ../libgf/gf.cpp ../libgf/gf.hpp ../libmath/miscmath.hpp
-	g++ -c -O ../libgf/gf.cpp
+all: $(TARGET)
 
-1e.o: ../libint/1e.cpp ../libint/1e.hpp ../libgf/gf.hpp ../libmath/linalg.hpp
-	g++ -c -O ../libint/1e.cpp
+$(TARGET): $(OBJECTS)
+	$(CXX) $(LDFLAGS) -o $@ $(OBJECTS)
 
-2e.o: ../libint/2e.cpp ../libint/2e.hpp ../libint/1e.hpp
-	g++ -c -O ../libint/2e.cpp
-
-mol.o: ../libmol/mol.cpp ../libmol/mol.hpp ../libgf/gf.hpp
-	g++ -c -O ../libmol/mol.cpp
-
-hartree-fock.o: hartree-fock.cpp hartree-fock.hpp ../libint/2e.hpp ../libmath/linalg.hpp ../libmol/mol.hpp
-	g++ -c -O hartree-fock.cpp
-
-hartree-fock: miscmath.o linalg.o gf.o 1e.o 2e.o mol.o hartree-fock.o
-	g++ -O -o hartree-fock miscmath.o linalg.o gf.o 1e.o 2e.o mol.o hartree-fock.o
+%.o: %.cpp
+	$(CXX) $(LDFLAGS) -c $< -o $@
 
 clean:
 	rm -f *.o
