--- a/hartree-fock/Makefile
+++ b/hartree-fock/Makefile
@@ -16,9 +16,12 @@ gf.o: ../libgf/gf.cpp ../libgf/gf.hpp ../libmath/miscmath.hpp
 mol.o: ../libmol/mol.cpp ../libmol/mol.hpp ../libgf/gf.hpp
 	g++ -c -O ../libmol/mol.cpp
 
-hartree-fock.o: hartree-fock.cpp hartree-fock.hpp ../libint/2e.hpp ../libmath/linalg.hpp ../libmol/mol.hpp
+scf.o: ../libscf/scf.cpp ../libscf/scf.hpp ../libint/2e.hpp ../libmath/linalg.hpp ../libmol/mol.hpp
+	g++ -c -O ../libscf/scf.cpp
+
+hartree-fock.o: hartree-fock.cpp hartree-fock.hpp ../libscf/scf.hpp
 	g++ -c -O hartree-fock.cpp
 
-hartree-fock: miscmath.o linalg.o gf.o 1e.o 2e.o mol.o hartree-fock.o
-	g++ -O -o hartree-fock miscmath.o linalg.o gf.o 1e.o 2e.o mol.o hartree-fock.o -llapack -lblas
+hartree-fock: miscmath.o linalg.o gf.o 1e.o 2e.o mol.o scf.o hartree-fock.o
+	g++ -O -o hartree-fock miscmath.o linalg.o gf.o 1e.o 2e.o mol.o scf.o hartree-fock.o -llapack -lblas
 	rm -f *.o
