reorganized for more general scf

--- a/main/Makefile
+++ b/main/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS := -O
 
 SRC_DIRS := . ../libdft ../libgf ../libgrid ../libint ../libmath ../libmol ../libscf
 SRC := $(foreach dir, $(SRC_DIRS), $(wildcard $(dir)/*.cpp))
-OBJ := $(patsubst %.cpp, build/%.o, $(SRC))
+OBJ := $(SRC:.cpp=.o)
 TARGET := QC-EXEC
 
 LIBS := -lblas -llapack
@@ -13,8 +13,7 @@ all: $(TARGET)
 $(TARGET): $(OBJ)
 	$(CXX) $(OBJ) $(LIBS) -o $@
 
-build/%.o: %.cpp
-	@mkdir -p $(dir $@)
+%.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
