fixed lots of warnings

--- a/main/Makefile
+++ b/main/Makefile
@@ -1,5 +1,5 @@
 CXX := g++
-CXXFLAGS := -O2 -Wno-c++17-extensions #-fopenmp
+CXXFLAGS := -O2 -Wall -Wno-c++17-extensions #-fopenmp
 
 SRC_DIRS := . ../libaux ../libdft ../libgf ../libgrid ../libint ../libmath ../libmol ../libscf
 SRC := $(foreach dir, $(SRC_DIRS), $(wildcard $(dir)/*.cpp))
